# hexsmoothing

./: CMakeLists.txt  README.md  mixedElementMesh.vtk
data/: mixedElementMesh.vtk  pierrot_32735.mesh  ref_elements.vtk  screw2_2699.mesh  swivel2_7494.mesh  teaport_14941.mesh  teaport_input_tri.vtk
ext/stlbfgs/: CMakeLists.txt  README.md  stlbfgs.cpp
ext/ultimaille/: CMakeLists.txt
ext/ultimaille/ext/OpenNL_psm/: CMakeLists.txt
ext/ultimaille/sandpit/embed/: embed.cpp
ext/ultimaille/sandpit/pgp2d/: ff2d.cpp  pgp2d-flat.cpp  pgp2d.cpp
ext/ultimaille/sandpit/test/: test-range.cpp
ext/ultimaille/tests/: test-permutation.cpp
ext/ultimaille/ultimaille/: all.h  surface.cpp  volume.cpp  volume_connectivity.cpp
ext/ultimaille/ultimaille/attic/: voronoi.cpp
ext/ultimaille/ultimaille/helpers/: colocate.cpp  hilbert_sort.h  permutation.h
ext/ultimaille/ultimaille/io/: by_extension.h  geogram.cpp  medit.cpp  medit.h  obj.cpp  vtk.cpp  vtk.h
ext/ultimaille/ultimaille/syntactic-sugar/: assert.cpp  assert.h
lib/: elliptic_smoothing.cpp  elliptic_smoothing.h  hilbertMeshSort.cpp  hilbertMeshSort.h  mesh_converter.cpp  mesh_converter.h  standard_smoother.cpp  standard_smoother.h  vertexBasedSmoothing.cpp  vertex_based_smoothing.cpp  vertex_based_smoothing.h
parallel_lib/: lbfgs_wrapper.h  parallel_tet_smoother.cpp  parallel_tet_smoother.h
utils/: logTime.h  mat.h  meshStructures.h  projection.cpp  projection.h  vec.cpp  vec.h
